# Visual_Odometry

./: .gitignore  EssentialMatrix.md  Plan.md  calc_E.cpp  data.txt  smpldata.txt
Literature/: .~lock.Visual_Odometry_Part_1.docx#  Visual_Odometry_Part_1.docx  Visual_Odometry_Part_2.docx
implementetion/: AdapterMyMtrxToEigenMtrx.hpp  EssentMtrx.hpp  Makefile  Polynom.hpp  Transformation_Matrix.cpp  check__essent_mtrx.cpp  check_calc.m  check_kernel.m  check_nullspace.m  draft.txt  essent_matrix  expirement____.cpp  expirement_via_lib.cpp  expirement_with_lib.cpp  lib_test.cpp  main.cpp  octave-workspace  smpldata.txt  some_test.sh
implementetion/c++/: CMakeLists.txt  Camera.hpp  Features_Detect.cpp  Features_Match.cpp  Makefile  Matching.cpp  PointPosition.cpp  Rt_Calculation.cpp  Transformation_Matrix.cpp  Visualis.cpp  chec_xEx  check_equation_xEx.cpp  def_cam_data.txt  essent_matrix  glob_to_homogen_coords.cpp  listing.txt  main.cpp  test_viz.cpp  transform_coord
implementetion/c++/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
implementetion/c++/DataReader/: DataReader.hpp
implementetion/c++/EssentialMatrix/: CMakeLists.txt  EssentialMatrix.cpp  EssentialMatrix.hpp
implementetion/c++/PointTracker/: CalibReader.hpp  CourseTracker.hpp  DataReader.hpp  ImageReader.hpp  MSQ.hpp  MonoPointTracker.hpp  PointTracker.hpp  SimpleCalibReader.hpp  StatisticalProcessing.hpp  StereoCourseTracker.hpp  StereoPointTracker.hpp  Transformation.cpp  Transformation.hpp  TruePathReader.hpp  VisualizeCloudPoint.hpp
implementetion/c++/src/: Camera.cpp  EssetMtrx.cpp  main.cpp
implementetion/c++/src/headers/: AdapterMyMtrxToEigenMtrx.hpp  Camera.hpp  EssentMtrx.hpp
implementetion/c++/src/input_data/: smpldata.txt
implementetion/c++/test_libs_func/: Feat_Detect  Makefile  Test  check_svd.cpp  glob_to_homogen_coords.cpp  transform_fetures.cpp  trash.cpp
implementetion/input_data/: coords_for_check_xEx.txt  def_cam_1_data.txt  def_cam_2_data.txt  essential_matrix.txt  features.txt  global_coords.txt  homogen_features.txt  smpldata.txt
implementetion/input_data/point_pos/: def_cam_1_data.txt  def_cam_2_data.txt
implementetion/python/: Essent_Matrix.py  Essent_Matrix__TEST.py  data_coord.json  smpldata.txt  test_data.txt  visualis_point.py
implementetion/src/headers/: EssentMtrx.hpp  Polynom.hpp
implementetion/test/: main.cpp
implementetion/test_libs_func/: CMakeCache.txt  CMakeLists.txt  check_svd.cpp  cmake_install.cmake  glob_to_homogen_coords.cpp  trash.cpp
